--- a/AMSUI/pom.xml
+++ b/AMSUI/pom.xml
@@ -7,14 +7,18 @@
     <groupId>com.example</groupId>
     <artifactId>ams</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>demo</name>
+    <name>ams</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <junit.version>5.9.2</junit.version>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.8.1</version>
+        </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
